tests/baselines/reference/bindingPatternInParameter01.errors.txt
tests/cases/compiler/bindingPatternInParameter01.ts(4,3): error TS2552: Cannot find name 'console'. Did you mean 'Boolean'?


==== tests/cases/compiler/bindingPatternInParameter01.ts (1 errors) ====
    const nestedArray = [[[1, 2]], [[3, 4]]];
    
    nestedArray.forEach(([[a, b]]) => {
      console.log(a, b);
      ~~~~~~~
!!! error TS2552: Cannot find name 'console'. Did you mean 'Boolean'?
    });
    